--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="banner">
-    <a href="http://sixsq.github.com"><img src="http://sixsq.github.com/sixsq-logo.jpg" 
+    <a href="http://sixsq.github.com"><img src="http://sixsq.github.com/shared/images/sixsq-logo.jpg" 
                                            alt="" 
                                            title="SixSq red square" 
                                            height="90" width="90" /></a>
