also add default target

--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -4,7 +4,7 @@
   
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <base href="http://sixsq.github.com/" />
+    <base href="http://sixsq.github.com/" target="_blank" />
     <title>{{ page.title }}</title>
     <link href="/shared/css/sixsq-style.css" media="screen" rel="stylesheet" type="text/css">
     <link href="/shared/css/syntax.css" media="screen" rel="stylesheet" type="text/css">
