copy front-page layout for a start

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,14 @@
   
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <base href="http://sixsq.github.com/" />
     <title>{{ page.title }}</title>
     <link href="/shared/css/sixsq-style.css" media="screen" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="shared/js/jquery.js"></script>
-	<script type="text/javascript" src="shared/js/ie5fixes.js"></script>
-	<script type="text/javascript" src="shared/js/resourcebase2-dom-fp.js"></script>
-	<script type="text/javascript" src="shared/js/input-label.js"></script>
+    <link href="/shared/css/syntax.css" media="screen" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="shared/js/jquery.js"></script>
+    <script type="text/javascript" src="shared/js/ie5fixes.js"></script>
+    <script type="text/javascript" src="shared/js/resourcebase2-dom-fp.js"></script>
+    <script type="text/javascript" src="shared/js/input-label.js"></script>
   </head>
   
   <body>
