update to mimic mock up

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,32 @@
 <div id="footer">
-<p>Copyright © 2007-2012, SixSq Sàrl. All rights reserved.</p>
+<table id="footer-table">
+<tr>
+<td>
+  <div id="left">
+    <a href="http://sixsq.github.com"><img src="http://sixsq.github.com/shared/images/sixsq-logo.jpg" 
+                                           alt="" 
+                                           title="SixSq red square" 
+                                           height="90" width="90" /></a>
+  </div>
+</td>
+<td>
+  <div id="middle">
+    <p>SixSq Sarl, c/o Jawer, 7th floor, Building 7, Route de Pre Bois 20, 1215 Geneva, Switzerland</p>
+  </div>
+</td>
+<td>
+  <div id="right">
+    <p>Contact us</p>
+    <p>Need information? Give feedback? Get in touch...</p>
+    <p>+41 77 44 33 22</p>
+    <p><a href="mailto:info@sixsq.com">info@sixsq.com</a>
+    <p>Follow us on: feed, twitter, blog</p>
+  </div>
+</td>
+<tr>
+<td><td>
+<td><p>Copyright © 2007-2012, SixSq Sàrl. All rights reserved.</p></td>
+<td></td>
+</tr>
+</table>
 </div>
-
