--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -17,7 +17,7 @@
   <body>
     <div id="main">
 
-      {% include header.html %}
+      {% include front-header.html %}
 
         <div id="content" class="site">
 
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    {% include footer.html %}
+    {% include front-footer.html %}
 
   </body>
 </html>
