fix footer layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <div id="footer">
 <table id="footer-table">
+
 <tr>
 <td>
   <div id="left">
@@ -11,7 +12,13 @@
 </td>
 <td>
   <div id="middle">
-    <p>SixSq Sarl, c/o Jawer, 7th floor, Building 7, Route de Pre Bois 20, 1215 Geneva, Switzerland</p>
+    <div id="address>"
+     SixSq Sarl<br/>
+     c/o Jawer, 7th floor, Building 7<br/>
+     Route de Pre Bois 20<br/>
+     1215 Geneva<br/>
+     Switzerland
+    </div>
   </div>
 </td>
 <td>
@@ -23,10 +30,13 @@
     <p>Follow us on: feed, twitter, blog</p>
   </div>
 </td>
+</tr>
+
 <tr>
-<td><td>
+<td></td>
 <td><p>Copyright © 2007-2012, SixSq Sàrl. All rights reserved.</p></td>
 <td></td>
 </tr>
+
 </table>
 </div>
