use excerpts of posts in lists

--- a/_includes/front-footer.html
+++ b/_includes/front-footer.html
@@ -3,9 +3,8 @@
 
 <tr>
 <td>
-  <div id="section" Latest News</div>
-  <div id="title" LOREM IPSUM</div>
-  <div>First paragraph of the news item.</div>
+  <div id="section">Latest News</div>
+  {% include first-news-excerpt.html %}
 </td>
 <td>
   <div id="section" Latest Tweets</div>
@@ -13,9 +12,8 @@
   <div>Latest tweet information</div>
 </td>
 <td>
-  <div id="section" Latest Blog Entries</div>
-  <div id="title" LOREM IPSUM</div>
-  <div>Latest blog first paragraph</div>
+  <div id="section">Latest Blog Entries</div>
+  {% include first-blog-excerpt.html %}
 </td>
 </tr>
 
