--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -4,6 +4,7 @@
   
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="robots" content="noindex"/>
     <base href="http://sixsq.github.com/" />
     <title>{{ page.title }}</title>
     <link href="/shared/css/sixsq-style.css" media="screen" rel="stylesheet" type="text/css">
