use post.content rather than post.excerpt for now

--- a/_includes/front-footer.html
+++ b/_includes/front-footer.html
@@ -7,8 +7,8 @@
   {% include first-news-excerpt.html %}
 </td>
 <td>
-  <div id="section" Latest Tweets</div>
-  <div id="title" LOREM IPSUM</div>
+  <div id="section">Latest Tweets</div>
+  <div id="title">LOREM IPSUM</div>
   <div>Latest tweet information</div>
 </td>
 <td>
