--- a/_includes/first-news-excerpt.html
+++ b/_includes/first-news-excerpt.html
@@ -1,3 +1,3 @@
 {% assign post = site.categories.news | first %} 
 <div id="title">{{ post.title }}</div>
-<div id="excerpt">{{ post.excerpt }}</div>
+<div id="excerpt">{{ post.content }}</div>
