--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
 
       {% include header.html %}
 
-        <div id="content" class="site">
+      <h1>{{ page.title }}</h1>
 
-          {{ content }}
-
-        </div>
+      <div id="content" class="site">
+        {{ content }}
+      </div>
     </div>
 
     {% include footer.html %}
