--- a/_includes/first-blog-excerpt.html
+++ b/_includes/first-blog-excerpt.html
@@ -1,3 +1,4 @@
-{% assign post = site.categories.blog | first %} 
+{% for post in site.categories.blog limit:1 %}
 <div id="title">{{ post.title }}</div>
 <div id="excerpt">{{ post.content }}</div>
+{% endfor %}
