change id to class attributes; add initial styling

--- a/_includes/front-footer.html
+++ b/_includes/front-footer.html
@@ -1,18 +1,18 @@
-<div id="footer">
-<table id="footer-table">
+<div class="footer">
+<table class="footer-table">
 
 <tr>
 <td>
-  <div id="section">Latest News</div>
+  <div class="section">Latest News</div>
   {% include first-news-excerpt.html %}
 </td>
 <td>
-  <div id="section">Latest Tweets</div>
-  <div id="title">LOREM IPSUM</div>
+  <div class="section">Latest Tweets</div>
+  <div class="title">LOREM IPSUM</div>
   <div>Latest tweet information</div>
 </td>
 <td>
-  <div id="section">Latest Blog Entries</div>
+  <div class="section">Latest Blog Entries</div>
   {% include first-blog-excerpt.html %}
 </td>
 </tr>
