--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -1,5 +1,5 @@
-<div id="header">
-  <div id="top-menu">
+<div class="header">
+  <div class="top-menu">
     <a href="http://sixsq.github.com">Home</a>
     <a href="http://sixsq.github.com"><img src="http://sixsq.github.com/shared/images/sixsq-logo.jpg" 
                                            alt="" 
@@ -13,7 +13,7 @@
     <a href="pages/blog">Blog</a>
     <a href="pages/contact">Contact</a>
   </div>
-  <div id="banner">
+  <div class="banner">
     SPACE FOR BANNER...
   </div>
 </div>
