--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<div id="header">
-  <div id="top-menu">
+<div class="header">
+  <div class="top-menu">
     <a href="http://sixsq.github.com">Home</a>
     <a href="http://sixsq.github.com"></a>
     <a href="pages/about-us">About us</a>
@@ -10,6 +10,6 @@
     <a href="pages/blog">Blog</a>
     <a href="pages/contact">Contact</a>
   </div>
-  <div id="banner">
+  <div class="banner">
   </div>
 </div>
