--- a/_includes/first-news-excerpt.html
+++ b/_includes/first-news-excerpt.html
@@ -1,4 +1,4 @@
 {% for post in site.categories.news limit:1 %}
-<div id="title">{{ post.title }}</div>
-<div id="excerpt">{{ post.content }}</div>
+<div class="title">{{ post.title }}</div>
+<div class="excerpt">{{ post.content }}</div>
 {% endfor %}
