--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
-<div id="footer">
-<table id="footer-table">
+<div class="footer">
+<table class="footer-table">
 
 <tr>
 <td>
-  <div id="left">
+  <div class="left">
     <a href="http://sixsq.github.com"><img src="http://sixsq.github.com/shared/images/sixsq-logo.jpg" 
                                            alt="" 
                                            title="SixSq red square" 
@@ -11,8 +11,8 @@
   </div>
 </td>
 <td>
-  <div id="middle">
-    <div id="address>"
+  <div class="middle">
+    <div class="address>"
      <br/>
      SixSq Sarl<br/>
      c/o Jawer, 7th floor, Building 7<br/>
@@ -23,7 +23,7 @@
   </div>
 </td>
 <td>
-  <div id="right">
+  <div class="right">
     <p>Contact us</p>
     <p>Need information? Give feedback? Get in touch...</p>
     <p>+41 77 44 33 22</p>
