--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
   </head>
   
   <body>
-    <div id="main">
+    <div class="main">
 
       {% include header.html %}
 
       <h1>{{ page.title }}</h1>
 
-      <div id="content" class="site">
+      <div class="content" class="site">
         {{ content }}
       </div>
     </div>
