--- a/_layouts/untitled.html
+++ b/_layouts/untitled.html
@@ -16,11 +16,11 @@
   </head>
   
   <body>
-    <div id="main">
+    <div class="main">
 
       {% include header.html %}
 
-        <div id="content" class="site">
+        <div class="content" class="site">
 
           {{ content }}
 
