--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -20,6 +20,8 @@
 
       {% include front-header.html %}
 
+      {% include front-banner.html %}
+
         <div class="content" class="site">
 
           {{ content }}
