more uniformity in classes; further style updates

--- a/_includes/front-footer.html
+++ b/_includes/front-footer.html
@@ -7,12 +7,12 @@
   {% include first-news-excerpt.html %}
 </td>
 <td>
-  <div class="section">Latest Tweets</div>
+  <div class="section">Latest Tweet</div>
   <div class="title">LOREM IPSUM</div>
   <div>Latest tweet information</div>
 </td>
 <td>
-  <div class="section">Latest Blog Entries</div>
+  <div class="section">Latest Blog Entry</div>
   {% include first-blog-excerpt.html %}
 </td>
 </tr>
