more styling tests

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,18 +24,21 @@
 </td>
 <td>
   <div class="right">
-    <p>Contact us</p>
-    <p>Need information? Give feedback? Get in touch...</p>
-    <p>+41 77 44 33 22</p>
-    <p><a href="mailto:info@sixsq.com">info@sixsq.com</a>
-    <p>Follow us on: feed, twitter, blog</p>
+    <div class="contacts">
+      <br/>
+      Contact us<br/>
+      Need information? Give feedback? Get in touch...<br/>
+      +41 77 44 33 22<br/>
+      <a href="mailto:info@sixsq.com">info@sixsq.com<br/>
+      Follow us on: feed, twitter, blog<br/>
+    </div>
   </div>
 </td>
 </tr>
 
 <tr>
 <td></td>
-<td><p>Copyright © 2007-2012, SixSq Sàrl. All rights reserved.</p></td>
+<td><div class="copyright">Copyright © 2007-2012, SixSq Sàrl.<br/>All rights reserved.</div></td>
 <td></td>
 </tr>
 
