fix broken link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
       Contact us<br/>
       Need information? Give feedback? Get in touch...<br/>
       +41 77 44 33 22<br/>
-      <a href="mailto:info@sixsq.com">info@sixsq.com<br/>
+      <a href="mailto:info@sixsq.com">info@sixsq.com</a><br/>
       Follow us on: feed, twitter, blog<br/>
     </div>
   </div>
