start splitting html to use dynamic composition

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,46 +1,40 @@
-<div class="footer">
-<table class="footer-table">
+<div id="footer">
 
-<tr>
-<td>
-  <div class="left">
-    <a href="http://sixsq.github.com"><img src="http://sixsq.github.com/shared/images/sixsq-logo.jpg" 
-                                           alt="" 
-                                           title="SixSq red square" 
-                                           height="90" width="90" /></a>
+  <div class="footer_menu">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Customers</a></li>
+      <li><a href="#">Contact us</a></li>
+    </ul>
   </div>
-</td>
-<td>
-  <div class="middle">
-    <div class="address>"
-     <br/>
-     SixSq Sarl<br/>
-     c/o Jawer, 7th floor, Building 7<br/>
-     Route de Pre Bois 20<br/>
-     1215 Geneva<br/>
-     Switzerland
+
+  <div class="adress_copyright">
+    <div>
+      <span>SixSq.</span>
+      <br />c/o Jawer, 7th floor, Building 7
+      <br />Route de Pré-Bois 20
+      <br />1215, Geneva
+      <br />Switzerland
     </div>
+    <div class="copyright">&copy; 2007-2012, SixSq Sàrl. All rights reserved.</div>
+    <div class="design">Design by <a href="http://www.penceo.com">Penceo</a></div>
   </div>
-</td>
-<td>
-  <div class="right">
-    <div class="contacts">
-      <br/>
-      Contact us<br/>
-      Need information? Give feedback? Get in touch...<br/>
-      +41 77 44 33 22<br/>
-      <a href="mailto:info@sixsq.com">info@sixsq.com</a><br/>
-      Follow us on: feed, twitter, blog<br/>
-    </div>
+
+  <div class="contact_us">
+    <div><span>Contact us</span><br />Need information? Give feedback?<br />Get in touch.</div>
+    <div class="phone">+41 77 44 68 119<br />+41 77 44 68 170</div>
+    <a class="mail" href="mailto:info@sixsq.com">info@sixsq.com</a>
   </div>
-</td>
-</tr>
 
-<tr>
-<td></td>
-<td><div class="copyright">Copyright © 2007-2012, SixSq Sàrl.<br/>All rights reserved.</div></td>
-<td></td>
-</tr>
+  <div class="follow_us">
+    <div>Follow us on:</div>
+    <img src="img/design/icon_news.png" />
+    <img src="img/design/icon_twitter.png" />
+    <img src="img/design/icon_blog.png" />
+  </div>
 
-</table>
 </div>
