--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,7 @@
     <div>
       <h1>{{ post.title }}</h1>
       <h3>{{ post.subtitle }}</h3>
-      <p>{{ post.content }}</p>
+      {{ post.content }}
     </div>
     {% endfor %}
 
