--- a/_includes/products.html
+++ b/_includes/products.html
@@ -1,27 +1,12 @@
 <div class="front products">
 
-  <div class="status_lab">
-    <h2>StatusLab</h2>
-    <p>Open-source IaaS cloud distribution. Turn your physical infrastructure into a powerful IaaS cloud in minutes.</p>
-    <a href="#">Learn more</a>
-  </div>
+  {% for post in site.categories.banner %}
+  <div class="{{ post.class }}">
+    <h2>{{ post.title }}</h2>
+    {{ post.content }}
 
-  <div class="slip_stream">
-    <h2>SlipStream</h2>
-    <p>Automated, on-demand, creation of multi-machine runtime environments. In other words, your software engineering PaaS solution, as product and service.</p>
     <a href="#">Learn more</a>
   </div>
-
-  <div class="ready_pack">
-    <h2>ReadyPack</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <a href="#">Learn more</a>
-  </div>
-
-  <div class="training_coatching">
-    <h2>Training Coatching</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-    <a href="#">Learn more</a>
-  </div>
+  {% endfor %}
 
 </div>
