use the right posts for the products

--- a/_includes/products.html
+++ b/_includes/products.html
@@ -1,6 +1,6 @@
 <div class="front products">
 
-  {% for post in site.categories.banner %}
+  {% for post in site.categories.product %}
   <div class="{{ post.class }}">
     <h2>{{ post.title }}</h2>
     {{ post.content }}
