add about-us reference

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="footer_menu">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About us</a></li>
+      <li><a href="pages/about-us.html">About us</a></li>
       <li><a href="#">Products</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">News</a></li>
