--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
   <div class="menu_bar">
     <ul>
       <li class="home"><a href="index.html"></a></li>
-      <li class="about"><a href="#">About us</a></li>
+      <li class="about"><a href="pages/about-us.html">About us</a></li>
       <li><a href="#">Product</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="news.html">News</a></li>
