--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,33 +1,38 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html 
+   xmlns="http://www.w3.org/1999/xhtml" 
+   xml:lang="en" 
+   version="XHTML+RDFa 1.0" 
+   dir="ltr"
+   xmlns:content="http://purl.org/rss/1.0/modules/content/"
+   xmlns:dc="http://purl.org/dc/terms/"
+   xmlns:foaf="http://xmlns.com/foaf/0.1/"
+   xmlns:og="http://ogp.me/ns#"
+   xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+   xmlns:sioc="http://rdfs.org/sioc/ns#"
+   xmlns:sioct="http://rdfs.org/sioc/types#"
+   xmlns:skos="http://www.w3.org/2004/02/skos/core#"
+   xmlns:xsd="http://www.w3.org/2001/XMLSchema#">
+
+  {% include head.html %}
   
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="robots" content="noindex"/>
-    <base href="http://sixsq.github.com/" />
-    <title>{{ page.title }}</title>
-    <link href="/shared/css/sixsq-style.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="/shared/css/syntax.css" media="screen" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="shared/js/jquery.js"></script>
-    <script type="text/javascript" src="shared/js/ie5fixes.js"></script>
-    <script type="text/javascript" src="shared/js/resourcebase2-dom-fp.js"></script>
-    <script type="text/javascript" src="shared/js/input-label.js"></script>
-  </head>
-  
-  <body>
-    <div class="main">
+  <body class="not_front_page">
+    <div id="wrapper">
 
-      {% include header.html %}
-
-      <h1>{{ page.title }}</h1>
-
-      <div class="content" class="site">
-        {{ content }}
+      <div id="header">
+        {% include top.html %}
       </div>
-    </div>
 
-    {% include footer.html %}
+      <div id="content">
+        {{ page.content }}
+      </div>
+
+      {% include customers.html %}
+
+      {% include footer.html %}
+
+    </div>
 
   </body>
 </html>
