--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,12 @@
 <head profile="http://www.w3.org/1999/xhtml/vocab">
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
   <title>{{ page.title }}</title>
+
   <link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
+
+  <base href="http://sixsq.github.com" />
   
   <script src="js/jquery.1.7.0.min.js" type="text/javascript"></script>
   <script src="js/cufon-yui.js" type="text/javascript"></script>
