--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <li><a href="#">Services</a></li>
       <li><a href="#">News</a></li>
       <li><a href="#">Customers</a></li>
-      <li><a href="#">Contact us</a></li>
+      <li><a href="contact">Contact us</a></li>
     </ul>
   </div>
 
