--- a/_includes/top.html
+++ b/_includes/top.html
@@ -9,7 +9,7 @@
       <li><a href="news.html">News</a></li>
       <li><a href="#">Customers</a></li>
       <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact">Contact</a></li>
     </ul>
   </div>
 </div>
