first try at generated news list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
         {{ page.content }}
       </div>
 
+      {% include side-products.html %}
+
       {% include customers.html %}
 
       {% include footer.html %}
