--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <title>{{ page.title }}</title>
+  <title>SixSq. | {{ page.title }}</title>
 
   <link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
 
