--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -31,7 +31,7 @@
 
       <div id="content">
         
-        {% include products.html %}
+        {% include front-products.html %}
         
         {% include latest.html %}
         
