--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -29,7 +29,7 @@
 
           <div class="breadcrumb">
             <a href="/" class="first">Home</a>
-            <a href="news.html" class="current">News</a>
+            <a href="{{ page.url }}" class="current">{{ page.title }}</a>
           </div>
           
           <div class="main">
@@ -48,14 +48,14 @@
             <div class="list_news">
               <ul>
                 
-                {% for post in site.categories.news %}
+                {% for post in site.categories.{{ page.type }} %}
                 <li>
 	          <img src="{{ post.image }}" />
                   <a href="{{ post.url }}" class="title">{{ post.title }}</a>
                   <div class="teaser">
                     {{ post.content | strip_html | truncatewords: 25 }}
                   </div>
-                  <div class="date">{{ post.date }}</div>
+                  <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
                 </li>
                 {% endfor %}
                 
