add links to all pages

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -4,12 +4,12 @@
     <ul>
       <li class="home"><a href="index.html"></a></li>
       <li class="about"><a href="about-us.html">About us</a></li>
-      <li><a href="#">Product</a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="products">Products</a></li>
+      <li><a href="services.html">Services</a></li>
       <li><a href="news.html">News</a></li>
-      <li><a href="#">Customers</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="contact">Contact</a></li>
+      <li><a href="customers.html">Customers</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 </div>
