--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
 
   <div class="footer_menu">
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="about-us.html">About us</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">News</a></li>
-      <li><a href="#">Customers</a></li>
-      <li><a href="contact">Contact us</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="customers.html">Customers</a></li>
+      <li><a href="contact.html">Contact us</a></li>
     </ul>
   </div>
 
