--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="footer_menu">
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about-us.html">About us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="services.html">Services</a></li>
