--- a/_includes/top.html
+++ b/_includes/top.html
@@ -4,7 +4,7 @@
     <ul>
       <li class="home"><a href="index.html"></a></li>
       <li class="about"><a href="about-us.html">About us</a></li>
-      <li><a href="products">Products</a></li>
+      <li><a href="products.html">Products</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="news.html">News</a></li>
       <li><a href="customers.html">Customers</a></li>
