--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -48,7 +48,7 @@
             <div class="list_news">
               <ul>
                 
-                {% for post in site.categories.news %}
+                {% for post in site.categories.blog %}
                 <li>
 	          <img src="{{ post.image }}" />
                   <a href="{{ post.url }}" class="title">{{ post.title }}</a>
