--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -28,41 +28,15 @@
         <div class="content_bg">
 
           <div class="breadcrumb">
-            <a href="/" class="first">Home</a>
+            <a href="index.html" class="first">Home</a>
             <a href="{{ page.url }}" class="current">{{ page.title }}</a>
           </div>
           
           <div class="main">
             <h1 class="list_title">{{ page.title }}</h1>
+
+            {{ post.content }}
             
-            <div class="pager">
-              <ul>
-                <li class="prev"><a href="">prev</a></li>
-                <li><a href="#">1</a></li>
-                <li class="current"><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li class="next"><a href="">next</a></li>
-              </ul>
-            </div>
-            
-            <div class="list_news">
-              <ul>
-                
-                {% for post in site.categories.news %}
-                <li>
-	          <img src="{{ post.image }}" />
-                  <a href="{{ post.url }}" class="title">{{ post.title }}</a>
-                  <div class="teaser">
-                    {{ post.content | strip_html | truncatewords: 25 }}
-                  </div>
-                  <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
-                </li>
-                {% endfor %}
-                
-              </ul>
-            </div>
-          </div>
-          
           {% include side-products.html %}
 
         </div>
