skeletons of all top-level pages

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
   <div class="menu_bar">
     <ul>
       <li class="home"><a href="index.html"></a></li>
-      <li class="about"><a href="about-us.html">About us</a></li>
+      <li class="about"><a href="about-us.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="news.html">News</a></li>
