--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
   <div class="footer_menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about-us.html">About us</a></li>
+      <li><a href="about-us.html">About Us</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="news.html">News</a></li>
       <li><a href="customers.html">Customers</a></li>
-      <li><a href="contact.html">Contact us</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 
