--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
 
-  <base href="http://sixsq.github.com" />
+  <base href="http://localhost:4000" />
   
   <script src="js/jquery.1.7.0.min.js" type="text/javascript"></script>
   <script src="js/cufon-yui.js" type="text/javascript"></script>
