--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -35,7 +35,9 @@
           <div class="main">
             <h1 class="list_title">{{ page.title }}</h1>
 
-            {{ post.content }}
+            {{ page.content }}
+
+          </div>
             
           {% include side-products.html %}
 
