--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -33,7 +33,7 @@
         
         {% include front-products.html %}
         
-        {% include latest.html %}
+        {% include front-latest.html %}
         
         {% include customers.html %}
         
