--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,15 +4,15 @@
 
   <title>SixSq. | {{ page.title }}</title>
 
-  <link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
-
   <base href="http://localhost:4000" />
   
+  <link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
+
   <script src="js/jquery.1.7.0.min.js" type="text/javascript"></script>
   <script src="js/cufon-yui.js" type="text/javascript"></script>
   <script src="js/helveticaneue_300-helveticaneue_700.font.js" type="text/javascript"></script>
   <script src="js/bebas_400.font.js" type="text/javascript"></script>
   <script src="js/sixsq.js" type="text/javascript"></script>
   <script src="js/jquery.bxSlider.min.js" type="text/javascript"></script>
+  <script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
 </head>
-
