--- a/_includes/products.html
+++ b/_includes/products.html
@@ -1,4 +1,4 @@
-{% for post in site.categories.product %}
+{% for post in site.categories.products %}
 <div class="{{ post.class }}">
   <h2>{{ post.title }}</h2>
   {{ post.content }}
