--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -26,10 +26,24 @@
 
       <div id="content">
         <div class="content_bg">
+
+          <div class="breadcrumb">
+            <a href="/" class="first">Home</a>
+            <a href="/{{ page.category }}.html">{{ page.category | capitalize }}</a>
+            <a href="{{ page.url }}" class="current">{{ page.title }}</a>
+          </div>
           
-          {{ page.content }}
+          <div class="main">
+            <h1 class="list_title">{{ page.title }}</h1>
+            <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
+
+            <div class="article">
+              {{ page.content }}
+            </div>
+
+          </div>
           
-          {% include side-products.html %}
+          {% include side-latest.html %}
 
         </div>
       </div>
