--- a/_layouts/customers.html
+++ b/_layouts/customers.html
@@ -48,7 +48,7 @@
             <div class="list_news">
               <ul>
                 
-                {% for post in site.categories.customer %}
+                {% for post in site.categories.customers %}
                 <li>
 	          <img src="{{ post.image }}" />
                   <a href="{{ post.url }}" class="title">{{ post.title }}</a>
