ensure links to product pages work

--- a/_includes/products.html
+++ b/_includes/products.html
@@ -3,6 +3,6 @@
   <h2>{{ post.title }}</h2>
   {{ post.content }}
   
-  <a href="#">Learn more</a>
+  <a href="{{ post.url }}">Learn more</a>
 </div>
 {% endfor %}
