--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -1,7 +1,7 @@
 <div class="news">
   {% for post in site.categories.news limit:1 %}
   <h3>{{ post.title }}</h3>
-  <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
+  <p>{{ post.content | markdownify | strip_html | truncatewords: 25 }}</p>
   <a href="{{ post.url }}">Learn more</a>
   {% endfor %}
 </div>
@@ -31,7 +31,7 @@
 <div class="blog_entries">
   {% for post in site.categories.blog limit:1 %}
   <h3>{{ post.title }}</h3>
-  <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
+  <p>{{ post.content | markdownify | strip_html | truncatewords: 25 }}</p>
   <a href="{{ post.url }}">Learn more</a>
   {% endfor %}
 </div>
