--- a/_includes/products.html
+++ b/_includes/products.html
@@ -1,7 +1,7 @@
 {% for post in site.categories.products %}
 <div class="{{ post.class }}">
   <h2>{{ post.title }}</h2>
-  {{ post.content | strip_html | truncatewords: 15 }}
+  {{ post.content | markdownify | strip_html | truncatewords: 15 }}
   
   <a href="{{ post.url }}">Learn more</a>
 </div>
