change to common layout for category indexes

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -48,7 +48,7 @@
             <div class="list_news">
               <ul>
                 
-                {% for post in category_list %}
+                {% for post in category_items %}
                 <li>
 	          <img src="{{ post.image }}" />
                   <a href="{{ post.url }}" class="title">{{ post.title }}</a>
