move to single layout for category index pages

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -29,7 +29,7 @@
 
           <div class="breadcrumb">
             <a href="/" class="first">Home</a>
-            <a href="/{{ page.category }}.html">{{ page.category | capitalize }}</a>
+            <a href="/{{ page.category }}/index.html">{{ page.category | capitalize }}</a>
             <a href="{{ page.url }}" class="current">{{ page.title }}</a>
           </div>
           
