--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about-us.html">About Us</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="customers.html">Customers</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="products/index.html">Products</a></li>
+      <li><a href="services/index.html">Services</a></li>
+      <li><a href="news/index.html">News</a></li>
+      <li><a href="customers/index.html">Customers</a></li>
+      <li><a href="contact/index.html">Contact</a></li>
     </ul>
   </div>
 
