--- a/_includes/top.html
+++ b/_includes/top.html
@@ -4,11 +4,11 @@
     <ul>
       <li class="home"><a href="index.html"></a></li>
       <li class="about"><a href="about-us.html">About Us</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="customers.html">Customers</a></li>
-      <li><a href="blog.html">Blog</a></li>
+      <li><a href="products/index.html">Products</a></li>
+      <li><a href="services/index.html">Services</a></li>
+      <li><a href="news/index.html">News</a></li>
+      <li><a href="customers/index.html">Customers</a></li>
+      <li><a href="blog/index.html">Blog</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
