--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -35,7 +35,7 @@
           <div class="main">
             <h1 class="list_title">{{ page.title }}</h1>
 
-            {{ page.content }}
+            {{ page.content | markdownify }}
 
           </div>
             
