reduce tweets to one; style the tweet box correctly

--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -7,15 +7,14 @@
 </div>
 
 <div class="tweets">
-  <h3>Tweets</h3>
   
-  <p class="twitters" id="sixsq">Loading tweets...</p>
+  <p id="sixsq">Loading tweets...</p>
   
   <script charset="utf-8" type="text/javascript">  
   jQuery(function() {
   getTwitters('sixsq', { 
   id: 'sixsq', 
-  count: 2,
+  count: 1,
   enableLinks: false, 
   ignoreReplies: true, 
   template: '%text% (%time%)'
