--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,9 +15,8 @@
   <div class="adress_copyright">
     <div>
       <span>SixSq.</span>
-      <br />c/o Jawer, 7th floor, Building 7
-      <br />Route de Pré-Bois 20
-      <br />1215, Geneva
+      <br />15 rue du Pré-de-la-Fontaine
+      <br />1217  Meyrin
       <br />Switzerland
     </div>
     <div class="copyright">&copy; 2007-2012, SixSq Sàrl. All rights reserved.</div>
