Removed the hardcoded full path for base href with /

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
   <title>SixSq. | {{ page.title }}</title>
 
-  <base href="http://sixsq.github.com" />
+  <base href="/" />
   
   <link rel="stylesheet" type="text/css" href="sixsq.css" media="screen" />
 
