--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -35,7 +35,9 @@
           
           <div class="main">
             <h1 class="list_title">{{ page.title }}</h1>
+            {% if page.category == "news" %}
             <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
+            {% endif %}
 
             <div class="article">
               {{ page.content | markdownify }}
