--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,4 +1,5 @@
 <div class="customers">
+  <a href="/customers">
   <h3>Customers</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   <div class="logos">
@@ -10,4 +11,5 @@
     <img src="img/design/logo_terma.png" />
     <img src="img/design/logo_thales.png" />
   </div>
+  </a>
 </div>
