--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,7 +1,7 @@
 <div class="customers">
   <a href="/customers">
   <h3>Customers</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p>Our customers are large and small system integrators, high-tech companies, institutions and agencies. We value transparent relationships, built on trust and honesty. This approach is valued by our customers and partners, giving us an edge over competition.</p>
   <div class="logos">
     <img src="img/design/logo_eu.png" />
     <img src="img/design/logo_sfp.png" />
