--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -38,6 +38,9 @@
             {% if page.category == "news" %}
             <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
             {% endif %}
+            {% if page.author %}
+            <div class="author">{{ page.author }}</div>
+            {% endif %}
 
             <div class="article">
               {{ page.content | markdownify }}
