--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -50,6 +50,9 @@
                   {% if post.category == news %}
                   <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
                   {% endif %}
+                  {% if post.author %}
+                  <div class="author">{{ post.author }}</div>
+                  {% endif %}
                 </li>
                 {% endif %}
                 {% endfor %}
