Replaced Meyrin with Geneva

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
     <div>
       <span>SixSq.</span>
       <br />15 rue du Pré-de-la-Fontaine
-      <br />1217  Meyrin
+      <br />1217, Geneva
       <br />Switzerland
     </div>
     <div class="copyright">&copy; 2007-2012, SixSq Sàrl. All rights reserved.</div>
