--- a/_includes/products.html
+++ b/_includes/products.html
@@ -1,6 +1,10 @@
 {% for post in site.categories.products %}
 <div class="{{ post.class }}">
-  <h2>{{ post.title }}</h2>
+  {% if post.title2  %}
+    <h2>{{ post.title2 }}</h2>
+  {% else %}
+    <h2>{{ post.title }}</h2>
+  {% endif %}
   <p>{{ post.content | markdownify | strip_html | truncatewords: 14 }}</p>
   
   <a href="{{ post.url }}">Learn more</a>
