--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -3,13 +3,13 @@
   <h3>Customers</h3>
   <p>Our customers are large and small system integrators, high-tech companies, institutions and agencies. We value transparent relationships, built on trust and honesty. This approach is valued by our customers and partners, giving us an edge over competition.</p>
   <div class="logos">
-    <img src="img/design/logo_eu.png" />
-    <img src="img/design/logo_sfp.png" />
     <img src="img/design/logo_esa.png" />
     <img src="img/design/logo_esoc.png" />
+    <img src="img/content/logo_atos.png" />
     <img src="img/design/logo_scisys.png" />
     <img src="img/design/logo_terma.png" />
     <img src="img/design/logo_thales.png" />
+    <img src="img/content/logo_infn.png" />
   </div>
   </a>
 </div>
