--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       <li><a href="products/index.html">Products</a></li>
       <li><a href="news/index.html">News</a></li>
       <li><a href="customers/index.html">Customers</a></li>
-      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 
@@ -30,9 +30,12 @@
 
   <div class="follow_us">
     <div>Follow us on:</div>
-    <img src="img/design/icon_news.png" />
-    <img src="img/design/icon_twitter.png" />
-    <img src="img/design/icon_blog.png" />
+    <a href="http://twitter.com/#!/sixsq">
+        <img src="img/design/icon_twitter.png" />
+    </a>
+    <a href="blog/index.html">
+        <img src="img/design/icon_blog.png" />
+    </a>
   </div>
 
 </div>
