Adjusted account key for new gmail account

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,8 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-6461733-1']);
+  _gaq.push(['_setAccount', 'UA-30684997-1']);
+  _gaq.push(['_setDomainName', 'sixsq.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -29,4 +30,5 @@
   })();
 
 </script>
+
 </head>
