Removed vertical bar since we have the . after SixSq

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <title>SixSq. | {{ page.title }}</title>
+  <title>SixSq. {{ page.title }}</title>
 
   <base href="/" />
   
