--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,12 @@
 
   <div class="footer_menu">
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about-us.html">About Us</a></li>
-      <li><a href="products/index.html">Products</a></li>
-      <li><a href="news/index.html">News</a></li>
-      <li><a href="customers/index.html">Customers</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/about-us.html">About Us</a></li>
+      <li><a href="/products/index.html">Products</a></li>
+      <li><a href="/news/index.html">News</a></li>
+      <li><a href="/customers/index.html">Customers</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
 
@@ -33,7 +33,7 @@
     <a href="http://twitter.com/#!/sixsq">
         <img src="img/design/icon_twitter.png" />
     </a>
-    <a href="blog/index.html">
+    <a href="/blog/index.html">
         <img src="img/design/icon_blog.png" />
     </a>
   </div>
