--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -28,7 +28,7 @@
         <div class="content_bg">
 
           <div class="breadcrumb">
-            <a href="index.html" class="first">Home</a>
+            <a href="/index.html" class="first">Home</a>
             <a href="{{ page.url }}" class="current">{{ page.title }}</a>
           </div>
           
