--- a/_includes/top.html
+++ b/_includes/top.html
@@ -2,13 +2,13 @@
   <div class="logo"></div>
   <div class="menu_bar">
     <ul>
-      <li class="home"><a href="index.html"></a></li>
-      <li class="about"><a href="about-us.html">About Us</a></li>
-      <li><a href="products/index.html">Products</a></li>
-      <li><a href="news/index.html">News</a></li>
-      <li><a href="customers/index.html">Customers</a></li>
-      <li><a href="blog/index.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li class="home"><a href="/index.html"></a></li>
+      <li class="about"><a href="/about-us.html">About Us</a></li>
+      <li><a href="/products/index.html">Products</a></li>
+      <li><a href="/news/index.html">News</a></li>
+      <li><a href="/customers/index.html">Customers</a></li>
+      <li><a href="/blog/index.html">Blog</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
 </div>
