Updated logos on front page

--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -9,7 +9,7 @@
     <img src="/img/design/logo_scisys.png" />
     <img src="/img/design/logo_terma.png" />
     <img src="/img/design/logo_thales.png" />
-    <img src="/img/content/logo_infn.png" />
+    <img src="/img/content/logo_ebu-uer.png" />
   </div>
   </a>
 </div>
