--- a/_includes/top.html
+++ b/_includes/top.html
@@ -8,7 +8,7 @@
       <li><a href="/news/index.html">News</a></li>
       <li><a href="/customers/index.html">Customers</a></li>
       <li><a href="/blog/index.html">Blog</a></li>
-      <li><a href="/jobs/index.html">Jobs</a></li>
+<!--      <li><a href="/jobs/index.html">Jobs</a></li> -->
       <li><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
