Added support details

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,8 +24,9 @@
 
   <div class="contact_us">
     <div><span>Contact us</span><br />Need information? Give feedback?<br />Get in touch.</div>
-    <div class="phone">+41 77 44 68 119<br />+41 77 44 68 170</div>
-    <a class="mail" href="mailto:info@sixsq.com">info@sixsq.com</a>
+    <div class="phone">info: +41 77 44 68 119<br />support: +41 22 57 52 229</div>
+    <div class="mail"><a href="mailto:info@sixsq.com">info@sixsq.com</a><br /><a href="mailto:support@sixsq.com">support@sixsq.com</a>
+	</div>
   </div>
 
   <div class="follow_us">
