Replaced permalink with link This avoids banner entries redefining the permalink

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
 
     {% for post in site.categories.banner %}
     <div>
-	  <a href="{{ post.permalink }}">
+	  <a href="{{ post.link }}">
         <h1>{{ post.title }}</h1>
         <h3>{{ post.subtitle }}</h3>
         {{ post.content }}
